# SpotiPy

./: .readthedocs.yaml  LICENSE  README.md  SpotiPy_LimbDarkening_CLV_PLAGES.py  params.txt  pyproject.toml  test_package.py
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  requirements.txt  usage.rst
examples/: run_analysis.py
paper/: paper.bib  paper.md
spotipy_legacy/: README.md  SpotiPy_LimbDarkening_CLV_PLAGES.py
src/spotipy/: __init__.py  aligning.py  downloading.py  gui_tools.py  limbdarkening_removal.py  processing.py  segmentation.py  tracking.py
src/spotipy_solar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
