[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotipy-solar"
version = "0.1.0"
description = "A modular tool for solar spot analysis, segmentation, and tracking."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Emily Joe", email = "emily.joe@example.com"},
  {name = "Saqib Sumra", email = "your.email@example.com"}
]
keywords = ["solar physics", "sunspots", "segmentation", "astronomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "scipy",
    "sunpy",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/Emily-Joe/SpotiPy"
"Bug Tracker" = "https://github.com/Emily-Joe/SpotiPy/issues"
